He introducido un H2 de prueba

--- a/prueba git.html
+++ b/prueba git.html
@@ -9,6 +9,7 @@
 <body>
     <p>Prueba de Git</p>
     <h1>Vamos a ver si funcionan los Git</h1>
+    <h2>Prueba desde Sourcetree</h2>
     
 </body>
 </html>
